[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amplify-storage-utils"
version = "1.1.0"
description = "Object storage utilities"
readme = "README.md"
authors = [{name = "Joe Futrelle", email = "jfutrelle@whoi.edu"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ['storage']
dependencies = [
    'boto3',
    'aiobotocore',
    'aiofiles',
    'aiosqlite',
    'pyyaml',
    'requests'
]
[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "pytest-asyncio"
]

[tool.hatch.build.targets.wheel]
packages = ["src/storage"]

[project.urls]
Repository = "https://github.com/WHOIGit/amplify-storage-utils"
